# sepanta_sparke_new

./: check_pkg_resources.py  generate_5_sparke_images.py  generate_audio_without_sparke.py  generate_sparke_guided_samples.py  gnerating_audio_sparkediffuser.py  hello.py  inspect_site_packages.py  pyproject.toml  tango.py
conditional-vendi/: README.md  log.py  test.py
src/diffusers/pipelines/: rke_guidance_utils_audioldm2.py
src/diffusers/pipelines/audioldm/: conditional_evaluation.py  pipeline_audioldm_sparke.py
src/diffusers/pipelines/audioldm2/: pipeline_audioldm2_sparke.py
src/diffusers/pipelines/tango/: __init__.py  pipeline_tango.py
tango-master/: models.py
tango-master/audioldm_eval/audio/: stft.py
tango-master/tango2/: models.py  tango.py
